opam-version: "2.0"
authors: "Emeka Nkurumeh"
maintainer: "emekankurumeh@outlook.com"
homepage: "https://github.com/emekoi/ppx_serf"
dev-repo: "git+https://github.com/emekoi/ppx_serf.git"
bug-reports: "https://github.com/emekoi/ppx_serf/issues/"
doc: "https://emekoi.github.io/ppx_serf/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "dune"
  "extlib"
  "stringext"
  "cohttp" 
  "yojson"
  "cohttp-lwt-unix"
  "lwt"
  "uri"
  "ppxlib" {build}
  "ppx_tools" {build}
  "ppx_deriving" {build}
]
synopsis: "Build API clients from type definitions"
description:
  "ppx_serf allows you build API clients from type definitions."
