(executable
  (name test)
  (preprocess (pps ppx_serf lwt_ppx))
  (libraries ppx_deriving_yojson cohttp cohttp-lwt-unix lwt_ssl extlib)

)

(alias
  (name example)
  (deps test.exe))

; (executable
;  (name pp)
;  (modules pp)
;  (libraries ppx_serf ppxlib))

; (rule
;  (targets test.actual.ml)
;  (deps (:pp pp.exe) (:input test.ml))
;  (action (run ./%{pp} -deriving-keep-w32 both --impl %{input} -o %{targets})))

; (alias
;  (name runtest)
;  (action (diff test.expected.ml test.actual.ml)))

; (test
;   (name test)
;   (modules test)
;   (preprocess (pps ppx_serf lwt_ppx))
;   (libraries ppx_deriving_yojson cohttp cohttp-lwt-unix extlib)
  ; )